refactor: 일괄 구매 수량 옵션 추가 (#176)