@@ -1,6 +1,11 @@
 package com.backend.connectable.order.service;
 
+import static com.backend.connectable.fixture.ArtistFixture.createArtistBigNaughty;
+import static com.backend.connectable.fixture.EventFixture.createEvent;
+import static com.backend.connectable.fixture.TicketFixture.createTicketWithSalesStatus;
+import static com.backend.connectable.fixture.UserFixture.createUserMrLee;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.backend.connectable.artist.domain.Artist;
@@ -8,6 +13,7 @@ import com.backend.connectable.artist.domain.repository.ArtistRepository;
 import com.backend.connectable.event.domain.*;
 import com.backend.connectable.event.domain.repository.EventRepository;
 import com.backend.connectable.event.domain.repository.TicketRepository;
+import com.backend.connectable.exception.ConnectableException;
 import com.backend.connectable.order.domain.OrderStatus;
 import com.backend.connectable.order.domain.repository.OrderDetailRepository;
 import com.backend.connectable.order.domain.repository.OrderRepository;
@@ -17,9 +23,7 @@ import com.backend.connectable.order.ui.dto.OrderResponse;
 import com.backend.connectable.security.custom.ConnectableUserDetails;
 import com.backend.connectable.user.domain.User;
 import com.backend.connectable.user.domain.repository.UserRepository;
-import java.time.LocalDateTime;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -47,21 +51,12 @@ class OrderServiceTest {
 
     @Autowired OrderService orderService;
 
-    private User user;
-    private Artist artist;
-    private Event event;
-    private TicketMetadata ticket1Metadata;
-    private Ticket ticket1;
-    private TicketMetadata ticket2Metadata;
-    private Ticket ticket2;
-    private TicketMetadata ticket3Metadata;
-    private Ticket ticket3;
-
-    private final String userKlaytnAddress = "0x12345678";
-    private final String userNickname = "leejp";
-    private final String userPhoneNumber = "010-3333-7777";
-    private final boolean userPrivacyAgreement = true;
-    private final boolean userIsActive = true;
+    private final User user = createUserMrLee();
+    private final Artist artist = createArtistBigNaughty();
+    private final Event event = createEvent(artist);
+    private final Ticket ticket1 = createTicketWithSalesStatus(event, 1, TicketSalesStatus.ON_SALE);
+    private final Ticket ticket2 = createTicketWithSalesStatus(event, 2, TicketSalesStatus.ON_SALE);
+    private final Ticket ticket3 = createTicketWithSalesStatus(event, 3, TicketSalesStatus.ON_SALE);
 
     @BeforeEach
     void setUp() {
@@ -72,125 +67,10 @@ class OrderServiceTest {
         artistRepository.deleteAll();
         userRepository.deleteAll();
 
-        user =
-                User.builder()
-                        .klaytnAddress(userKlaytnAddress)
-                        .nickname(userNickname)
-                        .phoneNumber(userPhoneNumber)
-                        .privacyAgreement(userPrivacyAgreement)
-                        .isActive(userIsActive)
-                        .build();
-
-        artist =
-                Artist.builder()
-                        .bankCompany("NH")
-                        .bankAccount("9000000000099")
-                        .artistName("빅나티")
-                        .email("bignaughty@gmail.com")
-                        .password("temptemp1234")
-                        .phoneNumber("01012345678")
-                        .artistImage("https://image.url")
-                        .build();
-
-        event =
-                Event.builder()
-                        .description("조엘의 콘서트 at Connectable")
-                        .salesFrom(LocalDateTime.of(2022, 7, 12, 0, 0))
-                        .salesTo(LocalDateTime.of(2022, 7, 30, 0, 0))
-                        .contractAddress("0x123456")
-                        .eventName("조엘의 콘서트")
-                        .eventImage("https://image.url")
-                        .twitterUrl("https://github.com/joelonsw")
-                        .instagramUrl("https://www.instagram.com/jyoung_with/")
-                        .webpageUrl("https://papimon.tistory.com/")
-                        .startTime(LocalDateTime.of(2022, 8, 1, 18, 0))
-                        .endTime(LocalDateTime.of(2022, 8, 1, 19, 0))
-                        .salesOption(SalesOption.FLAT_PRICE)
-                        .artist(artist)
-                        .build();
-
-        ticket1Metadata =
-                TicketMetadata.builder()
-                        .name("조엘 콘서트 #1")
-                        .description("조엘의 콘서트 at Connectable")
-                        .image(
-                                "https://connectable-events.s3.ap-northeast-2.amazonaws.com/ticket_test1.png")
-                        .attributes(
-                                new HashMap<>() {
-                                    {
-                                        put("Background", "Yellow");
-                                        put("Artist", "Joel");
-                                        put("Seat", "A6");
-                                    }
-                                })
-                        .build();
-
-        ticket1 =
-                Ticket.builder()
-                        .event(event)
-                        .tokenUri(
-                                "https://connectable-events.s3.ap-northeast-2.amazonaws.com/json/1.json")
-                        .price(100000)
-                        .ticketSalesStatus(TicketSalesStatus.ON_SALE)
-                        .ticketMetadata(ticket1Metadata)
-                        .build();
-
-        ticket2Metadata =
-                TicketMetadata.builder()
-                        .name("조엘 콘서트 #2")
-                        .description("조엘의 콘서트 at Connectable")
-                        .image(
-                                "https://connectable-events.s3.ap-northeast-2.amazonaws.com/ticket_test2.png")
-                        .attributes(
-                                new HashMap<>() {
-                                    {
-                                        put("Background", "Yellow");
-                                        put("Artist", "Joel");
-                                        put("Seat", "A5");
-                                    }
-                                })
-                        .build();
-
-        ticket2 =
-                Ticket.builder()
-                        .event(event)
-                        .tokenUri(
-                                "https://connectable-events.s3.ap-northeast-2.amazonaws.com/json/2.json")
-                        .price(100000)
-                        .ticketSalesStatus(TicketSalesStatus.ON_SALE)
-                        .ticketMetadata(ticket2Metadata)
-                        .build();
-
-        ticket3Metadata =
-                TicketMetadata.builder()
-                        .name("조엘 콘서트 #3")
-                        .description("조엘의 콘서트 at Connectable")
-                        .image(
-                                "https://connectable-events.s3.ap-northeast-2.amazonaws.com/ticket_test3.png")
-                        .attributes(
-                                new HashMap<>() {
-                                    {
-                                        put("Background", "Yellow");
-                                        put("Artist", "Joel");
-                                        put("Seat", "A5");
-                                    }
-                                })
-                        .build();
-
-        ticket3 =
-                Ticket.builder()
-                        .event(event)
-                        .tokenUri(
-                                "https://connectable-events.s3.ap-northeast-2.amazonaws.com/json/3.json")
-                        .price(100000)
-                        .ticketSalesStatus(TicketSalesStatus.ON_SALE)
-                        .ticketMetadata(ticket3Metadata)
-                        .build();
-
         userRepository.save(user);
         artistRepository.save(artist);
         eventRepository.save(event);
-        ticketRepository.saveAll(Arrays.asList(ticket1, ticket2, ticket3));
+        ticketRepository.saveAll(List.of(ticket1, ticket2, ticket3));
     }
 
     @DisplayName("티켓을 구매하였을때, 주문정보 및 주문상세정보가 등록된다.")
@@ -201,8 +81,8 @@ class OrderServiceTest {
                 new ConnectableUserDetails(user.getKlaytnAddress());
         OrderRequest orderRequest =
                 new OrderRequest(
-                        "이정필",
-                        "010-3333-7777",
+                        user.getNickname(),
+                        user.getPhoneNumber(),
                         event.getId(),
                         Arrays.asList(ticket1.getId(), ticket2.getId()));
 
@@ -226,35 +106,44 @@ class OrderServiceTest {
                 new ConnectableUserDetails(user.getKlaytnAddress());
         OrderRequest orderRequest1 =
                 new OrderRequest(
-                        "이정필",
-                        "010-3333-7777",
+                        user.getNickname(),
+                        user.getPhoneNumber(),
                         event.getId(),
-                        Arrays.asList(ticket1.getId(), ticket2.getId()));
+                        List.of(ticket1.getId(), ticket2.getId()));
         OrderRequest orderRequest2 =
                 new OrderRequest(
-                        "이정필", "010-3333-7777", event.getId(), Arrays.asList(ticket3.getId()));
-
-        // when
+                        user.getNickname(),
+                        user.getPhoneNumber(),
+                        event.getId(),
+                        List.of(ticket3.getId()));
         orderService.createOrder(connectableUserDetails, orderRequest1);
         orderService.createOrder(connectableUserDetails, orderRequest2);
+
+        // when
         List<OrderDetailResponse> orderDetailResponses =
                 orderService.getOrderDetailList(connectableUserDetails);
 
         // then
         assertEquals(3L, orderDetailResponses.size());
+
         assertThat(orderDetailResponses.get(0).getTicketSalesStatus())
                 .isEqualTo(TicketSalesStatus.PENDING);
         assertThat(orderDetailResponses.get(0).getOrderStatus()).isEqualTo(OrderStatus.REQUESTED);
         assertThat(orderDetailResponses.get(0).getModifiedDate()).isNotNull();
-        assertThat(orderDetailResponses.get(0).getTicketMetadata().getName()).contains("조엘");
-        assertThat(orderDetailResponses.get(0).getEventId()).isNotNull();
-        assertThat(orderDetailResponses.get(0).getPrice()).isEqualTo(100000);
+        assertThat(orderDetailResponses.get(0).getTicketMetadata().getName())
+                .isEqualTo(ticket1.getTicketMetadata().getName());
+        assertThat(orderDetailResponses.get(0).getEventId()).isEqualTo(event.getId());
+        assertThat(orderDetailResponses.get(0).getPrice()).isEqualTo(ticket1.getPrice());
+
         assertThat(orderDetailResponses.get(1).getTicketSalesStatus())
                 .isEqualTo(TicketSalesStatus.PENDING);
         assertThat(orderDetailResponses.get(1).getOrderStatus()).isEqualTo(OrderStatus.REQUESTED);
         assertThat(orderDetailResponses.get(1).getModifiedDate()).isNotNull();
-        assertThat(orderDetailResponses.get(1).getEventId()).isNotNull();
-        assertThat(orderDetailResponses.get(1).getPrice()).isEqualTo(100000);
+        assertThat(orderDetailResponses.get(1).getTicketMetadata().getName())
+                .isEqualTo(ticket2.getTicketMetadata().getName());
+        assertThat(orderDetailResponses.get(1).getEventId()).isEqualTo(event.getId());
+        assertThat(orderDetailResponses.get(1).getPrice()).isEqualTo(ticket2.getPrice());
+
         assertThat(orderDetailResponses.get(0).getModifiedDate())
                 .isGreaterThanOrEqualTo(orderDetailResponses.get(1).getModifiedDate());
     }
@@ -276,5 +165,50 @@ class OrderServiceTest {
         assertThat(orderResponse.getStatus()).isEqualTo("success");
         Ticket updatedTicket1 = ticketRepository.findById(ticket1.getId()).get();
         assertThat(updatedTicket1.getTicketSalesStatus()).isEqualTo(TicketSalesStatus.PENDING);
+    }
+
+    @DisplayName("List에 담긴 0의 갯수만큼 event에 대응되는 티켓중 판매가능한 티켓을 orderDetail로 주문한다.")
+    @Test
+    void ticketIdMultipleZero() {
+        // given
+        ConnectableUserDetails connectableUserDetails =
+                new ConnectableUserDetails(user.getKlaytnAddress());
+        OrderRequest orderRequest =
+                new OrderRequest(
+                        user.getNickname(),
+                        user.getPhoneNumber(),
+                        event.getId(),
+                        List.of(0L, 0L, 0L));
+
+        // when
+        OrderResponse orderResponse =
+                orderService.createOrder(connectableUserDetails, orderRequest);
+
+        // then
+        assertThat(orderResponse.getStatus()).isEqualTo("success");
+        Ticket updatedTicket1 = ticketRepository.findById(ticket1.getId()).get();
+        Ticket updatedTicket2 = ticketRepository.findById(ticket2.getId()).get();
+        Ticket updatedTicket3 = ticketRepository.findById(ticket3.getId()).get();
+        assertThat(updatedTicket1.getTicketSalesStatus()).isEqualTo(TicketSalesStatus.PENDING);
+        assertThat(updatedTicket2.getTicketSalesStatus()).isEqualTo(TicketSalesStatus.PENDING);
+        assertThat(updatedTicket3.getTicketSalesStatus()).isEqualTo(TicketSalesStatus.PENDING);
+    }
+
+    @DisplayName("List에 담긴 0의 갯수가 event에 대응되는 티켓중 판매가능한 티켓의 수보다 크다면 예외가 발생한다.")
+    @Test
+    void ticketIdMultipleZeroOverLimit() {
+        // given
+        ConnectableUserDetails connectableUserDetails =
+                new ConnectableUserDetails(user.getKlaytnAddress());
+        OrderRequest orderRequest =
+                new OrderRequest(
+                        user.getNickname(),
+                        user.getPhoneNumber(),
+                        event.getId(),
+                        List.of(0L, 0L, 0L, 0L, 0L, 0L));
+
+        // when & then
+        assertThatThrownBy(() -> orderService.createOrder(connectableUserDetails, orderRequest))
+                .isInstanceOf(ConnectableException.class);
     }
 }
